style(mobile): better mobile view fix column spanning on mobile viewport

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="container h-100">
 		<div class="row align-items-center h-100">
-			<div class="col-6 mx-auto">
+			<div class="col-md-6 col-sm-12 mx-auto">
 				<div class="jumbotron">
 					<div class="col-12">
 						<svg version="1.0" id="main-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
