refactor(Prep): New look prep

--- a/index.html
+++ b/index.html
@@ -4,151 +4,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<style>
-			body,html{
-				height:100%;
-			}
-			svg#main-logo {
-				width: 100%;
-			}
-			div#version {
-				position: absolute;
-				bottom: 0;
-				right: 0;
-			}
-	</style>
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="looking-good.css">
     <title>michaelwood.dev</title>
   </head>
-  <body>
-
-	<div class="container h-100">
-		<div class="row align-items-center h-100">
-			<div class="col-md-6 col-sm-12 mx-auto">
-				<div class="jumbotron">
-					<div class="col-12">
-						<svg version="1.0" id="main-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-								width="424.23px" height="117.01px" viewBox="0 0 424.23 117.01" enable-background="new 0 0 424.23 117.01" xml:space="preserve">
-							<rect x="415.702" y="47.105" fill="#282828" width="0.563" height="67.833"/>
-							<g>
-								<path fill="#2D6E7C" d="M278.04,88.563c2.394,0,3.591,1.471,3.591,4.413s-1.197,4.413-3.591,4.413
-									c-2.378,0-3.567-1.471-3.567-4.413S275.662,88.563,278.04,88.563z"/>
-								<path fill="#2D6E7C" d="M311.582,92.657h-0.188c-1.78,2.96-4.315,4.439-7.607,4.439c-3.165,0-5.65-1.325-7.453-3.975
-									c-1.804-2.649-2.705-6.349-2.705-11.099c0-4.786,0.905-8.511,2.717-11.179c1.811-2.667,4.292-4.001,7.441-4.001
-									c3.244,0,5.78,1.418,7.607,4.254h0.283c-0.189-2.287-0.283-3.722-0.283-4.307V55.199h4.299v41.366h-3.473L311.582,92.657z
-									M311.393,83.113v-1.09c0-4.023-0.548-6.89-1.643-8.6s-2.839-2.565-5.232-2.565c-4.284,0-6.426,3.739-6.426,11.218
-									c0,7.337,2.158,11.006,6.474,11.006c2.394,0,4.114-0.784,5.161-2.353C310.775,89.161,311.33,86.623,311.393,83.113z"/>
-								<path fill="#2D6E7C" d="M343.139,82.9h-18.285c0.126,6.646,2.835,9.969,8.127,9.969c3.071,0,5.984-0.673,8.741-2.021v4.254
-									c-2.614,1.329-5.48,1.994-8.6,1.994c-3.858,0-6.945-1.325-9.261-3.975c-2.314-2.649-3.473-6.296-3.473-10.939
-									c0-4.714,1.067-8.449,3.201-11.205s4.988-4.134,8.563-4.134c3.339,0,6.005,1.188,7.997,3.563c1.992,2.375,2.988,5.539,2.988,9.491
-									V82.9z M324.949,78.966h13.537c0-5.405-2.143-8.108-6.426-8.108C327.728,70.858,325.358,73.561,324.949,78.966z"/>
-								<path fill="#2D6E7C" d="M355.87,96.565l-9.827-29.19h4.441l5.669,17.333c1.339,4.094,2.127,6.975,2.362,8.64h0.143
-									c0.109-0.78,0.905-3.66,2.386-8.64l5.646-17.333h4.465l-9.828,29.19H355.87z"/>
-								<path fill="#2D6E7C" d="M385.847,57.698h3.887c-6.029,6.664-9.044,14.578-9.044,23.74c0,9.234,3.002,17.147,9.004,23.74h-3.847
-									c-5.963-6.256-8.943-14.151-8.943-23.687C376.904,72.063,379.884,64.132,385.847,57.698z"/>
-								<path fill="#2D6E7C" d="M401.606,105.178h-3.827c5.989-6.575,8.983-14.488,8.983-23.74c0-9.181-3.008-17.094-9.023-23.74h3.867
-									c5.976,6.398,8.964,14.329,8.964,23.793C410.57,91.062,407.582,98.958,401.606,105.178z"/>
-							</g>
-							<g>
-								<path fill="#402B7F" d="M38.365,31.342c0-3.79-0.512-6.496-1.536-8.119c-1.024-1.623-2.666-2.434-4.925-2.434
-									c-2.525,0-4.458,1.597-5.8,4.79h-0.159c-0.883-3.193-2.763-4.79-5.641-4.79c-2.366,0-4.14,1.474-5.323,4.421h-0.265l-0.715-3.895
-									h-3.363v13.732l4.292-0.015c0.011-4.075,0.327-6.806,0.952-8.178c0.636-1.395,1.695-2.092,3.178-2.092
-									c2.207,0,3.31,2.281,3.31,6.842v3.402l4.264-0.015v-0.729c0-3.421,0.348-5.86,1.046-7.316c0.697-1.456,1.814-2.185,3.35-2.185
-									c1.094,0,1.875,0.5,2.344,1.5c0.467,1,0.702,2.781,0.702,5.342v3.361l4.29-0.015V31.342z"/>
-								<path fill="#402B7F" d="M55.07,15.446c0.759,0,1.417-0.25,1.973-0.75c0.556-0.5,0.834-1.258,0.834-2.276c0-2-0.936-3-2.807-3
-									c-1.889,0-2.833,1-2.833,3C52.237,14.438,53.181,15.446,55.07,15.446z"/>
-								<polygon fill="#402B7F" points="57.454,21.315 45.511,21.315 45.511,24.552 52.634,25.104 52.634,34.901 57.454,34.884 	"/>
-								<path fill="#402B7F" d="M87.771,24.999c2.083,0,4.449,0.5,7.097,1.5l1.642-4.158c-2.79-1.035-5.755-1.552-8.897-1.552
-									c-4.644,0-8.245,1.289-10.805,3.869c-2.365,2.383-3.624,5.783-3.803,10.172l4.973-0.017C78.289,28.275,81.549,24.999,87.771,24.999
-									z"/>
-								<path fill="#402B7F" d="M126.827,31.342c0-7.036-3.434-10.553-10.301-10.553c-4.114,0-7.08,1.474-8.897,4.421h-0.265l0.212-3.79
-									V9.261h-4.82v25.465l4.833-0.017c0.137-6.625,2.837-9.947,8.117-9.947c4.202,0,6.303,2.281,6.303,6.842v3.055l4.819-0.017V31.342z"
-									/>
-								<path fill="#402B7F" d="M155.793,30.42c0-3.369-0.896-5.816-2.688-7.342s-4.691-2.29-8.699-2.29c-3.302,0-6.683,0.842-10.143,2.526
-									l1.668,3.605c3.195-1.438,6.09-2.158,8.686-2.158c4.308,0,6.462,2.071,6.462,6.211v1.816l-5.376,0.184
-									c-3.551,0.111-6.391,0.66-8.542,1.633l18.631-0.064V30.42z"/>
-								<path fill="#402B7F" d="M187.752,33.71c0-3.912-1.117-7.044-3.35-9.395c-2.233-2.351-5.221-3.526-8.964-3.526
-									c-4.008,0-7.208,1.364-9.6,4.092c-2.137,2.438-3.313,5.654-3.541,9.638l25.454-0.088V33.71z M167.361,32.789
-									c0.459-5.351,3.116-8.027,7.971-8.027c4.802,0,7.203,2.676,7.203,8.027H167.361z"/>
-								<polygon fill="#402B7F" points="207.768,9.261 195.825,9.261 195.825,12.472 202.922,13.025 202.922,34.377 207.768,34.36 	"/>
-								<polygon fill="#473D72" points="254.37,21.588 250.12,21.588 247.731,34.221 251.768,34.208 	"/>
-								<polygon fill="#473D72" points="225.452,21.588 221.094,21.588 223.693,34.305 227.759,34.291 	"/>
-								<polygon fill="#473D72" points="240.382,21.588 235.19,21.588 232.252,34.275 235.976,34.262 237.557,26.186 237.718,26.186 
-									239.391,34.25 243.178,34.237 	"/>
-								<path fill="#473D72" d="M268.247,25.09c5.039,0,7.801,3.018,8.303,9.031l5.041-0.018c-0.334-3.608-1.537-6.583-3.633-8.906
-									c-2.492-2.762-5.693-4.144-9.604-4.144c-4.125,0-7.402,1.354-9.832,4.063c-2.07,2.307-3.249,5.338-3.556,9.079l5.054-0.018
-									C260.502,28.126,263.241,25.09,268.247,25.09z"/>
-								<path fill="#473D72" d="M298.827,25.09c5.01,0,7.77,2.981,8.295,8.924l5.037-0.018c-0.346-3.56-1.545-6.5-3.621-8.8
-									c-2.492-2.762-5.693-4.144-9.602-4.144c-4.125,0-7.402,1.354-9.832,4.063c-2.051,2.285-3.225,5.282-3.545,8.973l5.051-0.018
-									C291.116,28.091,293.85,25.09,298.827,25.09z"/>
-								<path fill="#473D72" d="M329.032,25.09c2.727,0,4.713,0.86,5.959,2.58c0.982,1.355,1.57,3.443,1.779,6.242l4.986-0.017V9.344
-									h-4.896V21c0,0.588,0.107,2.032,0.324,4.331h-0.324c-2.08-2.851-4.967-4.277-8.662-4.277c-3.586,0-6.41,1.341-8.473,4.023
-									c-1.715,2.229-2.705,5.205-2.994,8.904l5.084-0.018C322.305,28.052,324.708,25.09,329.032,25.09z"/>
-							</g>
-							<g>
-								<polygon fill="#402B7F" points="22.37,53.043 26.633,53.043 26.633,37.823 22.37,37.839 	"/>
-								<path fill="#402B7F" d="M10.639,53.043h4.29V38.069c0-0.072,0.002-0.134,0.002-0.205l-4.292,0.015V53.043z"/>
-								<polygon fill="#402B7F" points="34.075,37.798 34.075,53.043 38.365,53.043 38.365,37.783 	"/>
-								<polygon fill="#402B7F" points="57.454,37.716 52.634,37.733 52.634,49.28 43.524,49.807 43.524,53.043 66.775,53.043 
-									66.775,49.807 57.454,49.28 	"/>
-								<path fill="#402B7F" d="M77.946,38.701c0-0.363,0.014-0.711,0.031-1.056l-4.973,0.018c-0.015,0.361-0.037,0.716-0.037,1.091
-									c0,4.772,1.253,8.435,3.761,10.987c2.506,2.553,6.028,3.83,10.566,3.83c3.442,0,6.346-0.536,8.712-1.606v-4.21
-									c-2.896,1.088-5.729,1.632-8.5,1.632C81.132,49.386,77.946,45.824,77.946,38.701z"/>
-								<path fill="#402B7F" d="M102.755,53.043h4.82V38.069c0-0.182,0.01-0.351,0.013-0.527l-4.833,0.017V53.043z"/>
-								<polygon fill="#402B7F" points="122.007,37.492 122.007,53.043 126.827,53.043 126.827,37.475 	"/>
-								<path fill="#402B7F" d="M137.162,37.438c-3.302,1.495-4.964,3.998-4.964,7.526c0,2.72,0.816,4.833,2.449,6.342
-									c1.633,1.509,3.888,2.264,6.766,2.264c2.26,0,4.104-0.33,5.535-0.987s2.824-1.837,4.184-3.54h0.212l0.98,4h3.469V37.374
-									L137.162,37.438z M151.026,41.517c0,2.597-0.772,4.61-2.317,6.04c-1.545,1.43-3.615,2.145-6.21,2.145
-									c-3.531,0-5.296-1.562-5.296-4.685c0-1.93,0.724-3.364,2.171-4.303c1.447-0.938,3.901-1.478,7.362-1.619l4.29-0.184V41.517z"/>
-								<path fill="#402B7F" d="M187.752,37.262l-25.454,0.089c-0.027,0.476-0.048,0.957-0.048,1.455c0,4.597,1.298,8.207,3.893,10.83
-									c2.595,2.623,6.055,3.935,10.38,3.935c3.496,0,6.708-0.658,9.64-1.974v-4.211c-3.09,1.334-6.356,2-9.798,2
-									c-5.932,0-8.969-3.29-9.11-9.87h20.497V37.262z"/>
-								<polygon fill="#402B7F" points="207.768,37.193 202.922,37.209 202.922,49.28 193.812,49.807 193.812,53.043 217.089,53.043 
-									217.089,49.807 207.768,49.28 	"/>
-								<path fill="#473D72" d="M247.731,37.054l-0.356,1.883c-0.52,2.691-1.058,6.194-1.614,10.506H245.6
-									c-0.43-2.905-1.031-6.095-1.802-9.571l-0.62-2.803l-3.788,0.013l0.157,0.758l3.524,15.934h5.246l3.45-16.734L247.731,37.054z"/>
-								<path fill="#473D72" d="M231.612,39.872c-0.664,3.083-1.274,6.274-1.83,9.571h-0.161c-0.413-3.689-0.924-7.191-1.533-10.506
-									l-0.329-1.813l-4.066,0.015l3.4,16.636h5.084l3.632-15.827l0.167-0.853l-3.723,0.013L231.612,39.872z"/>
-								<path fill="#473D72" d="M276.549,36.953c0.055,0.664,0.09,1.354,0.09,2.091c0,7.485-2.779,11.228-8.34,11.228
-									c-5.576,0-8.365-3.743-8.365-11.228c0-0.716,0.033-1.386,0.086-2.033l-5.054,0.018c-0.053,0.652-0.089,1.319-0.089,2.016
-									c0,4.634,1.25,8.336,3.752,11.107c2.502,2.771,5.689,4.157,9.563,4.157c4.09,0,7.361-1.364,9.82-4.09
-									c2.455-2.727,3.684-6.452,3.684-11.174c0-0.729-0.043-1.426-0.105-2.108L276.549,36.953z"/>
-								<path fill="#473D72" d="M307.122,36.847c0.061,0.695,0.1,1.421,0.1,2.197c0,7.485-2.781,11.228-8.34,11.228
-									c-5.578,0-8.365-3.743-8.365-11.228c0-0.755,0.035-1.461,0.094-2.14l-5.051,0.018c-0.061,0.686-0.102,1.388-0.102,2.122
-									c0,4.634,1.252,8.336,3.754,11.107c2.5,2.771,5.689,4.157,9.563,4.157c4.088,0,7.361-1.364,9.818-4.09
-									c2.457-2.727,3.686-6.452,3.686-11.174c0-0.767-0.049-1.499-0.119-2.215L307.122,36.847z"/>
-								<path fill="#473D72" d="M336.77,36.743c0.057,0.754,0.09,1.549,0.09,2.408v1.096c-0.072,3.529-0.703,6.082-1.896,7.659
-									c-1.191,1.577-3.152,2.366-5.877,2.366c-4.914,0-7.371-3.689-7.371-11.067c0-0.853,0.037-1.652,0.1-2.409l-5.084,0.018
-									c-0.059,0.752-0.1,1.524-0.1,2.337c0,4.776,1.027,8.497,3.08,11.161s4.883,3.997,8.486,3.997c3.748,0,6.637-1.488,8.662-4.465
-									h0.215l0.727,3.93h3.955V36.726L336.77,36.743z"/>
-							</g>
-							<rect x="456.397" y="368.51" fill="#282828" width="0.563" height="67.834"/>
-						</svg>
+  <body >
+		<section class="dark-gradient pb-5">
+			<div class="container h-100 align-items-center pb-5">
+				<div class="row">
+					<div class="col-4 ml-auto p-2">
+						<img src="./logo.svg" class="img-fluid" alt="michaelwood.dev logo">
 					</div>
-					<div class="col-12">
-						<p class="lead text-center">Warming up<span class="cursor">...</span></p>
-					</div>
-					<div id="version"><small class="text-muted">02/12/2019</small> v0.1</div>
 				</div>
+				<div class="row h-100 ">
+						<div class="col-sm-4 my-auto text-light">
+							<div class="text-right">
+								<img class="rounded-circle img-fluid p-5" alt="Michael Wood Profile Picture" src="./profile-pic.jpg">
+							</div>
+							<h1 class="roboto-slab">Hi,</h1>
+							<h1 class="roboto-slab">I'm Mike</h1>
+							<p class="lead roboto-slab">You could call me a Frond-End Developer, a Back-End Developer or even a Full Stack Developer</p>
+							<p class="lead roboto-slab">Simply put, I enjoy solving business problems using whichever tool best fits the senario</p>
+							<p class="lead roboto-slab">Dedicated to automating processes and increasing productivity within teams by using a range of web and software technologies</p>
+						</div>
+						<div class="col-sm-8 my-auto p-5">
+							<div class="text-center position-relative">
+								<div class="responsive-video col-12">
+										<iframe src="https://www.youtube.com/embed/NzF9esixlI8?autoplay=1&controls=0&modestbranding=1&showinfo=0&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</div>
+							</div>
+						</div>
+					</div>
 			</div>
-		</div>
-	</div>
+		</section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="funk-it-up.js"></script>
   </body>
 </html>
-
-<script>
-	var cursor = true;
-	var speed = 500;
-	setInterval(() => {
-	  if(cursor) {
-		document.querySelector('#main-logo > rect, .cursor').style.opacity = 0;
-		cursor = false;
-	  } else {
-		document.querySelector('#main-logo > rect, .cursor').style.opacity = 1;
-		cursor = true;
-	  }
-	}, speed);
-</script>
