refactor(File Manager): Adding file manager and changing text

--- a/index.html
+++ b/index.html
@@ -9,35 +9,69 @@
     <title>michaelwood.dev</title>
   </head>
   <body >
-		<section class="dark-gradient pb-5">
+		<section class="dark-gradient pb-1">
 			<div class="container h-100 align-items-center pb-5">
 				<div class="row">
-					<div class="col-4 ml-auto p-2">
+					<div class="col-6 col-md-4  ml-auto p-2">
 						<img src="./logo.svg" class="img-fluid" alt="michaelwood.dev logo">
 					</div>
 				</div>
 				<div class="row h-100 ">
-						<div class="col-sm-4 my-auto text-light">
+						<div class="col-md-4 my-auto text-light">
 							<div class="text-right">
 								<img class="rounded-circle img-fluid p-5" alt="Michael Wood Profile Picture" src="./profile-pic.jpg">
 							</div>
 							<h1 class="roboto-slab">Hi,</h1>
-							<h1 class="roboto-slab">I'm Mike</h1>
-							<p class="lead roboto-slab">You could call me a Frond-End Developer, a Back-End Developer or even a Full Stack Developer</p>
-							<p class="lead roboto-slab">Simply put, I enjoy solving business problems using whichever tool best fits the senario</p>
-							<p class="lead roboto-slab">Dedicated to automating processes and increasing productivity within teams by using a range of web and software technologies</p>
+							<h1 class="roboto-slab">I'm Mike.</h1>
+							<p class="lead roboto-slab">Some might call me a Frond-End Developer, a Back-End Developer or even a Full Stack Developer. </p>
+							<p class="lead roboto-slab">Simply put, I enjoy solving business problems using whichever tool best fits the senario. Sometimes that might be C# or PHP, SQL or NoSql, MVC or MVVM, Azure or On-Prem.</p>
+							<p class="lead roboto-slab">I'm dedicated to automating processes and increasing productivity within teams by using a range of web and software technologies.</p>
 						</div>
-						<div class="col-sm-8 my-auto p-5">
+						<div class="col-md-8 my-auto p-5">
 							<div class="text-center position-relative">
 								<div class="responsive-video col-12">
-										<iframe src="https://www.youtube.com/embed/NzF9esixlI8?autoplay=1&controls=0&modestbranding=1&showinfo=0&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe src="https://www.youtube.com/embed/NzF9esixlI8?autoplay=1&controls=0&modestbranding=1&showinfo=0&loop=1&playlist=NzF9esixlI8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</div>
 							</div>
 						</div>
 					</div>
+					<div class="text-center">
+						<p class="display-5 text-light">
+							Recent Projects &amp; Developments
+						</p>
+					</div>
 			</div>
 		</section>
 
+		<section class="light-gradient pb-5">
+			<div class="container align-items-center pb-2">
+				<div class="row">
+					<div class="col mt--12">
+							<div class="card">
+								<div class="card-body p-0">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="responsive-video">
+												<iframe src="https://www.youtube-nocookie.com/embed/vgokOnkegUU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											</div>
+										</div>
+										<div class="col p-4">
+											<h5 class="card-title text-center">Azure Blob Storage File Manager</h5>
+											<p class="card-text">
+												A recursive javascript function performs an <span title="Extract, Transform, Load">ETL</span> process to create a hierarchical 'tree view' of nested objects from the flat file list returned from the Azure Blob Storage API. 
+											</p>
+											<p>Each object within the tree view contains a nested item of 'children'; these could be files or folders, which enables simple navigation and paging.</p>
+											<p class="card-text">
+												Since the concept of folders does not exist in flat storage, I achieve this by creating an empty '.ignore' file within the desired (so called) 'directory' which is ignored by the view. This allows me to emulate the experience of files and folders.
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+					</div>
+				</div>
+			</div>
+		</section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
