fix(Typo): Frond-End > Front-End

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							</div>
 							<h1 class="roboto-slab">Hi,</h1>
 							<h1 class="roboto-slab">I'm Mike.</h1>
-							<p class="lead roboto-slab">Some might call me a Frond-End Developer, a Back-End Developer or even a Full Stack Developer. </p>
+							<p class="lead roboto-slab">Some might call me a Front-End Developer, a Back-End Developer or even a Full Stack Developer. </p>
 							<p class="lead roboto-slab">Simply put, I enjoy solving business problems using whichever tool best fits the senario. Sometimes that might be C# or PHP, SQL or NoSql, MVC or MVVM, Azure or On-Prem.</p>
 							<p class="lead roboto-slab">I'm dedicated to automating processes and increasing productivity within teams by using a range of web and software technologies.</p>
 						</div>
